hard-gists/5237007/run.log
=== Docker Run Log for 5237007 ===
Started at: Mi 29. Okt 15:29:40 CET 2025

[2025-10-29 15:29:40] START: Running container for 5237007
[2025-10-29 15:29:41] SUCCESS: Container 6ea40567990922fc1a101b1339aae316534b4bffe1ecf6f751eb88eb071e22e8 started for 5237007
=== Container logs for 5237007 ===
  File "/snippet.py", line 98
    except socket.error, e:
           ^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 5237007 ===
[2025-10-29 15:29:43] INFO: Container 6ea40567990922fc1a101b1339aae316534b4bffe1ecf6f751eb88eb071e22e8 has stopped
